feat: add application configuration and service worker
- Introduced APP_CONFIG for centralized app settings including API URLs, caching, and performance thresholds.
- Implemented a service worker for caching and offline support.
- Enhanced error handling and logging throughout the application.
- Added caching mechanism for API responses to improve performance.
- Implemented performance monitoring for key metrics (LCP, FID, CLS).
- Updated home page to include search functionality with debouncing.
- Refactored QuranAPI service to utilize caching and retry logic.
- Added SEO management for dynamic meta tags and structured data.
- Introduced validation utilities for input validation.
- Improved overall code structure and organization.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "description": "Aplikasi Al-Qur'an digital interaktif dengan 114 surah, terjemahan Indonesia, tafsir lengkap, dan audio dari berbagai reciter profesional.",
   "start_url": "/",
   "scope": "/",
-  "display": "standalone",
+  "display": "browser",
   "orientation": "portrait-primary",
   "theme_color": "#059669",
   "background_color": "#ffffff",
