--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "digital-alquran",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Digital Al-Quran - Baca, dengarkan, dan pelajari Al-Quran dengan mudah",
+  "author": "Your Name",
+  "license": "MIT",
+  "keywords": [
+    "quran",
+    "islam",
+    "islamic",
+    "arabic",
+    "digital",
+    "app"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "build:seo": "npm run build && npm run generate-sitemap",
-    "lint": "eslint .",
+    "build:analyze": "vite build --analyze",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "generate-sitemap": "ts-node scripts/generate-sitemap.ts"
   },
@@ -36,9 +50,15 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^17.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "terser": "^5.44.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.51.0",
     "vite": "^7.3.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
